# xll_template_cmake

./: CMakeLists.txt  xll_template.cpp
xll/: .gitignore  CMakeLists.txt  README.md
xll/xll/: args.h  error.cpp  fp.h  handle.h  oper.h  register.h  registry.h  utf8.h  xll_codec.h  xloper.h
xll/xll/macrofun/: xll_addin.cpp  xll_addin_manager.h  xll_function.cpp  xll_macrofun.h  xll_paste.h
